2015-11-25 Riccardo Mottola <rm@gnu.org>

	* configure
	* configure.ac
	Pick up compilers specified during gnustep configure, if available and not manually overridden.

2013-09-17 Riccardo Mottola <rm@gnu.org>

	* PDFDocument.m
	Move interface declaration up instead of using forward declaration.

2013-09-05 Riccardo Mottola <rm@gnu.org>

	* xpdf/xpdf-3.02/GNUmakefile.in
	Patch by Richard S.: explicitely pass c/C++ compiler and merge CXX/CC flags.

2013-09-03 Riccardo Mottola <rm@gnu.org>

	* xpdf/xpdf-3.02/xpdf/SplashOutputDev.cc
	Import OpenBSD patch to fix heap overflow.

2013-09-03 Riccardo Mottola <rm@gnu.org>

	* xpdf/xpdf-3.02/splash/SplashXPath.cc
	* xpdf/xpdf-3.02/xpdf/Stream.cc
	Import patches from openbsd, undescribed.

2013-09-03 Riccardo Mottola <rm@gnu.org>

	* xpdf/xpdf-3.02/splash/SplashXPathScanner.cc
	Import patch from OpenBSD
	http://www.mail-archive.com/ports@openbsd.org/msg23488.html

2013-08-16 Riccardo Mottola <rm@gnu.org>

	* xpdf/bridge/GNUmakefile.in
	* xpdf/xpdf-3.02/GNUmakefile.in
	Get CC and CXX variables, silence some warnings.

2012-06-13 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	For clang add -lstdc++ at linking stage.

2012-06-02 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	On OpenBSD, embed freetype path with -rpath

2012-06-02 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	Use C++ to link.

2012-05-31 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	* configure
	* configure.ac
	* xpdf/GNUmakefile.in
	* xpdf/bridge/GNUmakefile.in
	* xpdf/xpdf-3.02/GNUmakefile.in
	Do not force g++, pass compiler flags correctly.

2012-05-31 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	Pass additional flags.

	* configure.ac
	Better handling of freetype flags for openbsd

	* configure
	regenerated

2012-02-27 Riccardo Mottola <rm@gnu.org>

	* PDFImageRep.m:
	Clean up imports.

2012-02-27 Riccardo Mottola <rm@gnu.org>

	* PDFImageRep.m:
	Subclass -draw (suggested by Eric W. to make cario work again)
