@@ -1,2 +1,2 @@
 # which xpdf sources should be used?
-XPDF_SRC=xpdf-3.02
+XPDF_SRC=xpdf-3.04
